  exception handler on code with syntax errors.

- Issue #15897: zipimport.c doesn't check return value of fseek().
  Patch by Felipe Cruz.

- Issue #15801: Make sure mappings passed to '%' formatting are actually
  subscriptable.

- Issue #15111: __import__ should propagate ImportError when raised as a
  side-effect of a module triggered from using fromlist.

Library
-------

- Issue 10527: make multiprocessing use poll() instead of select() if available.

- Issue #16688: Fix backreferences did make case-insensitive regex fail on
  non-ASCII strings. Patch by Matthew Barnett.

- Issue #16486: Make aifc files work with 'with' as context managers.

- Issue #16485: Fix file descriptor not being closed if file header patching
  fails on closing of aifc file.

- Issue #16640: Run less code under a lock in sched module.

- Issue #16165: Fix sched.scheduler.run() method was block a scheduler for
  other threads.

- Issue #16641: Fix default values of sched.scheduler.enter arguments were
  modifiable.

- Issue #16504: IDLE now catches SyntaxErrors raised by tokenizer. Patch by
  Roger Serwy.

- Issue #16618: Make glob.glob match consistently across strings and bytes
  regarding leading dots.  Patch by Serhiy Storchaka.

- Issue #16788: Add samestat to Lib/ntpath.py

- Issue #16702: test_urllib2_localnet tests now correctly ignores proxies for
  localhost tests.

- Issue #16511: Use default IDLE width and height if config param is not valid.
  Patch Serhiy Storchaka.

- Issue #16713: Parsing of 'tel' urls using urlparse separates params from
  path.

- Issue #16443: Add docstrings to regular expression match objects.
  Patch by Anton Kasyanov.

- Issue #15701: Fix HTTPError info method call to return the headers information.

- Issue #16752: Add a missing import to modulefinder. Patch by Berker Peksag.

- Issue #16646: ftplib.FTP.makeport() might lose socket error details.
  (patch by Serhiy Storchaka)
